Criação do método de logout do sistema Criação do método que remove um post cadastrado
